<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <EditText
            android:hint="@string/title_hint"
            android:gravity="center_horizontal"
            android:id="@+id/title_ev"
            android:layout_width="wrap_content"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <View
            android:id="@+id/divider_1"
            android:background="?android:attr/listDivider"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:layout_below="@+id/title_ev"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/date_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="45dp"
            android:layout_below="@+id/divider_1">
            <ImageView
                android:contentDescription="@string/date_image_description"
                android:id="@+id/clock_img"
                android:src="@drawable/ic_today_black_18dp"
                android:layout_width="@dimen/icon_detail_size"
                android:layout_height="@dimen/icon_detail_size"/>
            <EditText
                android:id="@+id/date_ev"
                style="@style/detailTextTheme"
                android:inputType="date"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/detail_margin_start"
                android:hint="@string/date_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/location_layout"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_layout"
            android:layout_alignStart="@id/date_layout">
            <ImageView
                android:contentDescription="@string/location_description"
                android:id="@+id/location_img"
                android:src="@drawable/ic_place_black_24dp"
                android:layout_width="@dimen/icon_detail_size"
                android:layout_height="@dimen/icon_detail_size"/>
            <EditText
                android:id="@+id/location_tv"
                style="@style/detailTextTheme"
                android:layout_marginStart="@dimen/detail_margin_start"
                android:hint="@string/location_hint"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    <View
        android:id="@+id/divider_2"
        android:layout_marginTop="30dp"
        android:background="?android:attr/listDivider"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_below="@+id/time_layout"
        android:layout_centerHorizontal="true" />

    <ListView
        android:id="@+id/item_list_view"
        android:layout_marginTop="20dp"
        android:divider="@color/divider_color"
        android:animateLayoutChanges="true"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_below="@id/divider_2"
        android:layout_alignStart="@id/location_layout"
        xmlns:android="http://schemas.android.com/apk/res/android"/>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_action_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        fab:fab_size = "mini"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/fab_add"
        fab:fab_colorNormal="@android:color/holo_green_dark"/>

    <LinearLayout
        android:id="@+id/time_layout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignStart="@+id/location_layout"
        android:layout_below="@+id/location_layout"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/time_img"
            android:src="@drawable/ic_access_time_black_18dp"
            android:layout_width="@dimen/icon_detail_size"
            android:layout_height="@dimen/icon_detail_size"/>
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/time_ev"
            style="@style/detailTextTheme"
            android:layout_marginStart="@dimen/detail_margin_start"
            android:inputType="textMultiLine|text"
            android:hint="@string/time_hint"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>